--- a/src/views/usuarios/perfil.ejs
+++ b/src/views/usuarios/perfil.ejs
@@ -21,7 +21,7 @@
         
                 <!-- Columna 2: Formulario de datos personales y usuario -->
                 <div class="columna-perfil columna-perfil-derecha">
-                    <form class="formulario-perfil">
+                    <form class="formulario-perfil" action="/usuarios/perfil" method="post" id="formulario-perfil">
                         <h2>Datos Personales</h2>
                         <div class="campo-formulario-perfil">
                             <label for="apellido">Apellido:</label>
@@ -33,28 +33,31 @@
                         </div>
                         <div class="campo-formulario-perfil">
                             <label for="direccion">Dirección:</label>
-                            <input type="text" id="direccion" name="direccion" required <%=infoUsuario.direccion %>>
+                            <input type="text" id="direccion" name="direccion" required value="<%=infoUsuario.direccion %>">
                         </div>
                         <div class="campo-formulario-perfil">
                             <label for="telefono">Teléfono:</label>
-                            <input type="text" id="telefono" name="telefono" required <%=infoUsuario.telefono %>>
+                            <input type="text" id="telefono" name="telefono" required value="<%=infoUsuario.telefono %>">
                         </div>
                         <div class="campo-formulario-perfil">
                             <label for="correo">Correo:</label>
-                            <input type="email" id="correo" name="email" required <%=infoUsuario.email %>>
+                            <input type="email" id="correo" name="email" required value="<%=infoUsuario.email %>">
                         </div>
                         
                         <hr class="separador-perfil">
         
                         <h2>Datos de Usuario</h2>
                         <div class="campo-formulario-perfil">
-                            <label for="usuario">Usuario:</label><b><%=infoUsuario.login %></b><span style="color:red">* Este dato no puede cambiarse</span>
+                            <label for="usuario">Nombre de Usuario: 
+                                "<%=infoUsuario.login %>" <span style="color:red">  *Este dato no puede cambiarse</span>
+                            </label>
                         </div>
                         <div class="campo-formulario-perfil">
                             <label for="clave">Clave:</label>
-                            <input type="password" id="clave" name="clave" required <%=infoUsuario.password %>>
+                            <input type="password" id="clave" name="clave" required value="<%=infoUsuario.password %>">
+                            <input type="hidden" id="clave_original" name="clave_original" value="<%=infoUsuario.password %>">
                         </div>
-         
+                        <input type="hidden" name="user" id="user" value="<%=infoUsuario.login%>">
                         <button type="submit" class="btn-guardar-perfil" id="btn-guardar-perfil">Guardar Cambios</button>
                     </form>
                 </div>
@@ -70,7 +73,6 @@
         // Verifica si hay un aviso pasado desde el servidor y muestra la alerta
         const aviso = <%- JSON.stringify(aviso) %>;
         if (aviso === 'OK') {
-            document.querySelector(".no-login").style.display="block";
             Swal.fire({
                         title: 'Respuesta del Servidor!',
                         text: 'Sus datos fueron Actualizados',
