--- a/src/views/productos/producto_detalle.ejs
+++ b/src/views/productos/producto_detalle.ejs
@@ -14,7 +14,7 @@
                     <div class="control-admin">
                         <h4>Panel Admin</h4>
                         <ul class="menu-admin">
-                            <li><a href="/admin/editar_producto/<%=Oferta.item_id%>" class="edit"><i class="fas fa-edit"></i> Editar</a></li>
+                            <li><a href="/admin/editar_objeto/<%=Oferta.item_id%>" class="edit"><i class="fas fa-edit"></i> Editar</a></li>
                             <li><a href="#" class="delete"><i class="fas fa-trash"></i> Eliminar</a></li>
                         </ul>
                     </div>
@@ -65,7 +65,7 @@
                         <li><strong>Nombre del Arma: </strong><span class="value"><%=Oferta.weapon.name%></span></li>
                         <li><strong>Tipo del Arma: </strong><span class="value"><%=Oferta.weapon.weaponType%></span></li>
                         <li><strong>Consumo de Mana: </strong><span class="value"><%=Oferta.weapon.mp_consume%></span></li>
-                        <li><strong>Brazo en e que se Usa, Left/Right: </strong><span class="value"><%=Oferta.weapon.bodypart%></span></li>
+                        <li><strong>Lugar en e que se Usa, Left/Right: </strong><span class="value"><%=Oferta.weapon.bodypart%></span></li>
                         <li><strong>Cristal otorgado al romperse: </strong><span class="value"><%=Oferta.weapon.crystal_type%></span></li>
                         <li><strong>Cantidad de Cristales otorgado al romperse: </strong><span class="value"><%=Oferta.weapon.crystal_count%></span></li>
                         <li><strong>Peso: </strong><span class="value"><%=Oferta.weapon.weight%></span></li>
