--- a/src/views/productos/producto_detalle.ejs
+++ b/src/views/productos/producto_detalle.ejs
@@ -65,7 +65,7 @@
                         <li><strong>Nombre del Arma: </strong><span class="value"><%=Oferta.weapon.name%></span></li>
                         <li><strong>Tipo del Arma: </strong><span class="value"><%=Oferta.weapon.weaponType%></span></li>
                         <li><strong>Consumo de Mana: </strong><span class="value"><%=Oferta.weapon.mp_consume%></span></li>
-                        <li><strong>Lugar en e que se Usa, Left/Right: </strong><span class="value"><%=Oferta.weapon.bodypart%></span></li>
+                        <li><strong>Lugar en e que se Usa: </strong><span class="value"><%=Oferta.weapon.bodypart%></span></li>
                         <li><strong>Cristal otorgado al romperse: </strong><span class="value"><%=Oferta.weapon.crystal_type%></span></li>
                         <li><strong>Cantidad de Cristales otorgado al romperse: </strong><span class="value"><%=Oferta.weapon.crystal_count%></span></li>
                         <li><strong>Peso: </strong><span class="value"><%=Oferta.weapon.weight%></span></li>
